namespaces/live.cloud-platform.service.justice.gov.uk/laa-sds-stg/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-sds-stg"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-secure-document-storage-sensitive"
    cloud-platform.justice.gov.uk/application: "Secure Document Storage"
    cloud-platform.justice.gov.uk/owner: "Secure Document Storage Team: platform@digital"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-secure-document-storage-api"
    cloud-platform.justice.gov.uk/team-name: "secure-doc-storage-team"
    cloud-platform.justice.gov.uk/review-after: ""
